raft nullsafe